--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,17 +5,17 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.history.hatda"
         minSdkVersion 27
         targetSdkVersion 31
-        versionCode 31
-        versionName "6.7"
+        versionCode 32
+        versionName "6.7.1"
         //oneStore 패키지 명 : com.history.hatdaOnestore 버전 코드 11 버전 2.7
-        //플레이 스토어 패키지 명 : com.history.hatda 버전 코드 31 버전 6.7
+        //플레이 스토어 패키지 명 : com.history.hatda 버전 코드 32 버전 6.7.1
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -38,26 +38,26 @@ android {
 dependencies {
 
 
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.21'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.20-Beta'
     implementation 'com.github.dhaval2404:colorpicker:2.0'
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.4.0'
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
-    implementation 'com.google.android.gms:play-services-ads:20.5.0'
+    implementation 'com.google.android.gms:play-services-ads:21.1.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
-    implementation 'com.google.android.libraries.places:places:2.4.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'androidx.navigation:navigation-fragment:2.5.1'
+    implementation 'androidx.navigation:navigation-ui:2.5.1'
+    implementation 'com.google.android.libraries.places:places:2.6.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-    implementation("androidx.work:work-runtime-ktx:2.7.0")
+    implementation('androidx.work:work-runtime-ktx:2.7.1')
 
 }
